--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -119,7 +119,9 @@
 }
 .header__input {
   width: 100%;
+  display: flex;
 input{
+  margin-right: 15px;
   padding: 15px 0;
   width: 100%;
   background: #f1f1f1;
@@ -129,7 +131,15 @@ input{
   text-align: center;
   color: #767676;
 }
+
 }
+.header__btn{
+display: none;
+}
+.header__btn_visable{
+  display: block;
+}
+
 
 // ========================================================================
 .header-top {
