--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -1,154 +1,4 @@
-.banner {
-    margin: 40px 0;
-}
-
-.banner__body {
-    position: relative;
-}
-
-.banner__imgFon{
-    position: absolute;
-    width: 100%;  
-    height: 100%; 
-    object-fit: cover;
-}
-.banner__img {
-    position: relative;
-    height: 350px;
-    display: grid;
-    grid-template-columns: auto;
- 
-}
-.banner__logo {
-    padding: 5px;
-    margin: 24px 0 0 24px;
-    background-color: #ffff;
-    box-shadow: 0px 5px 6px rgba(44, 62, 106, 0.08);
-    border-radius: 10px;
-    justify-self: start;
-    align-self: start;
-    position: relative;
-    z-index: 30;
-}
-
-.banner__img_links {
-    margin: 0 20px 20px 0;
+.main__body{
     display: flex;
-    align-self: end;
-    justify-self: end;
     position: relative;
-    z-index: 30;
-    button{
-        margin-right: 20px;
-        &:last-child{
-            margin-right: 0;
-        }
-    }
-    @media(max-width: 768px){
-        margin: 0;
-    }
-}
-
-.banner__content {
-    background-color: #ffff;
-    display: flex;
-    justify-content: space-between;
-    padding: 24px;
-    @media(max-width: 768px){
-        flex-direction: column;
-    }
-}
-
-.banner__info_title {
-    max-width: 850px;
-}
-.banner__list {
-    display: flex;
-    padding-left: 15px;
-    li{
-        &.reviews{
-            &::before{
-                content: "";
-                position: absolute;
-                background: url("../../img/star.svg") no-repeat center/cover;
-                width: 15px;
-                height: 15px;
-                left: -15px;
-                display: block;
-                @media(max-width: 768px){
-                    left: 0;
-                }
-            }
-            @media(max-width: 768px){
-                padding-left: 15px;
-            }
-        }
-        margin-right: 38px;
-        position: relative;
-        display: flex;
-        align-items: center;
-        &::before{
-            content: "";
-            position: absolute;
-            background: url("../../img/star.svg") no-repeat center/cover;
-            background: #767676;
-            border-radius: 36px;
-            width: 8px;
-            height: 8px;
-            left: -15px;
-            @media(max-width: 768px){
-                display: none;
-            }
-        }
-        &:last-child{
-            margin-right: 0;
-        }
-    }
-    @media(max-width: 900px){
-        margin-right: 15px;
-    }
-    @media(max-width: 768px){
-        flex-direction: column-reverse;
-        padding-left: 0;
-    }
-}
-.banner-links {
-    @media(max-width: 768px){
-        display: flex;
-    }
-}
-.banner__links-row {
-    display: flex;
-    align-items:center;
-    justify-content: center;
-}
-.banner__links-items{
-    margin-right: 15px;
-    &:last-child{
-        margin-right: 0;
-    }
-    @media(max-width: 768px){
-        margin: 0 15px 10px 0;
-        display: flex;
-        align-items: center;
-        background: #FFFFFF;
-        box-shadow: 0px 7px 13px rgb(49 71 129 / 7%);
-        border-radius: 49px;
-        padding: 13px;
-        width: auto !important;
-        height: auto !important;
-
-    }
-}
-
-.banner__links-items.fovorite{
-    font-size: 14px;
-    line-height:  157%;
-    width: 145px;
-    height: 40px;
-    span{
-        margin-left: 8.5px;
-    }
-}
-.banner-footer {
 }
