--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -100,6 +100,9 @@
 }
 .header__item_type_input {
   flex: 1 1 60%;
+  @media (max-width: 1000px) {
+    display: none;
+  }
 }
 .header__logo {
   margin-right: 20px;
@@ -108,6 +111,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.header__city-box {
+  display: flex;
+  align-items: center;
+  @media (max-width: 1000px) {
+    display: none;
+  }
 }
 .header__city-arrow {
   margin-right: 10px;
@@ -120,47 +130,102 @@
 .header__input {
   width: 100%;
   display: flex;
-input{
-  margin-right: 15px;
-  padding: 15px 0;
-  width: 100%;
+  align-items: center;
+  display: flex;
   background: #f1f1f1;
   border-radius: 100px;
-  font-size: 14px;
-  line-height: 157%;
-  text-align: center;
-  color: #767676;
+  padding: 0 20px;
+
+  input {
+    margin-right: 15px;
+    padding: 15px 0;
+    width: 100%;
+    background: #f1f1f1;
+    border-radius: 100px;
+    font-size: 14px;
+    line-height: 157%;
+    text-align: center;
+    color: #767676;
+  }
+}
+.header__btn.btn {
+  display: none;
+  width: 20px;
+  height: 20px;
+  &.header__btn_visable {
+    display: flex;
+  }
 }
 
-}
-.header__btn{
-display: none;
-}
-.header__btn_visable{
-  display: block;
-}
 
-
-// ========================================================================
-.header-top {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 25px;
+.header__item_type_profile {
 }
-.header-column {
-  // flex: 1 1 auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.header__profile-avatar {
+  width: 32px;
+  height: 32px;
+  border-radius: 50px;
+  background-color: #767676;
+  margin-right: 15px;
+  @media (max-width: 1000px) {
+    margin-right: 0;
+  }
 }
-._input {
-  flex: 1 1 60%;
-  margin: 0 3%;
+.header__profile-name {
   @media (max-width: 1000px) {
     display: none;
   }
 }
+.header__burger {
+  position: relative;
+  display: none;
+  height: 20px;
+  &:before,
+  &:after {
+    content: '';
+    position: absolute;
+    width: 30px;
+    height: 2px;
+    left: 0;
+    background-color: #000000;
+    transition: all 0.3s ease-in-out;
+  }
+  &:before {
+    top: 0;
+  }
+  &:after {
+    bottom: 0;
+  }
+  span {
+    position: absolute;
+    width: 30px;
+    height: 2px;
+    top: 9px;
+    left: 0;
+    background-color: #000000;
+    transition: all 0.3s ease-in-out;
+  }
+  @media (max-width: 1000px) {
+    display: block;
+  }
+}
+.header__burger_active {
+  &:before {
+    transform: rotate(45deg);
+    transition: all 0.2s ease-in-out;
+    top: 9px;
+  }
+  &:after {
+    transform: rotate(-45deg);
+    transition: all 0.2s ease-in-out;
+    bottom: 9px;
+  }
+  span {
+    transform: scale(0);
+    transition: all 0.2s ease-in-out;
+  }
+}
+// ========================================================================
+
 .header-logo {
   margin-right: 20px;
   margin-bottom: 4px;
@@ -185,35 +250,7 @@ display: none;
     flex: 0 0 auto;
   }
 }
-.header-city_name {
-  display: flex;
-  font-size: 14px;
-  line-height: 22px;
-  max-width: 70px;
-  span {
-    overflow: hidden;
-    margin-right: 5px;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-  }
-  @media (max-width: 1000px) {
-    max-width: 100%;
-    padding: 0 20px;
-  }
-}
-.header-input {
-  width: 100%;
-  input {
-    padding: 15px 0;
-    width: 100%;
-    background: #f1f1f1;
-    border-radius: 100px;
-    font-size: 14px;
-    line-height: 157%;
-    text-align: center;
-    color: #767676;
-  }
-}
+
 .header-likes {
   margin-right: 40px;
   display: flex;
@@ -244,55 +281,7 @@ display: none;
 .header-name {
 }
 // ----------------------------
-.header-burger {
-  margin-left: 20px;
-  position: relative;
-  width: 30px;
-  display: none;
-  height: 20px;
-  &:before,
-  &:after {
-    content: '';
-    position: absolute;
-    width: 30px;
-    height: 2px;
-    left: 0;
-    background-color: #000000;
-    transition: all 0.3s ease-in-out;
-  }
-  &:before {
-    top: 0;
-  }
-  &:after {
-    bottom: 0;
-  }
-  span {
-    position: absolute;
-    width: 30px;
-    height: 2px;
-    top: 9px;
-    left: 0;
-    background-color: #000000;
-    transition: all 0.3s ease-in-out;
-  }
-}
 
-.header-burger.active {
-  &:before {
-    transform: rotate(45deg);
-    transition: all 0.2s ease-in-out;
-    top: 9px;
-  }
-  &:after {
-    transform: rotate(-45deg);
-    transition: all 0.2s ease-in-out;
-    bottom: 9px;
-  }
-  span {
-    transform: scale(0);
-    transition: all 0.2s ease-in-out;
-  }
-}
 @media (max-width: 1000px) {
   .header-burger {
     display: block;
