--- a/src/components/Main/Univers/Specialization/SpecializationCard.scss
+++ b/src/components/Main/Univers/Specialization/SpecializationCard.scss
@@ -20,8 +20,6 @@
   flex-direction: column;
   justify-content: space-between;
   position: relative;
-  &:nth-child(2) {
-  }
   &:nth-child(2)::after {
     content: '';
     display: flex;
@@ -35,10 +33,38 @@
       display: none;
     }
   }
-
   &:last-child {
     @media (max-width: 768px) {
       flex-direction: row;
+    }
+  }
+  @media (max-width: 768px){
+    max-width: 100%;
+  }
+}
+.specialization__card-stats {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+  position: relative;
+  &::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    background: #d8d8d8;
+    bottom: -10px;
+  }
+  &:last-child::after {
+    display: none;
+  }
+  @media (max-width: 768px){
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 15px;
+    &::after{
+      display: none;
     }
   }
 }
@@ -57,20 +83,7 @@
   justify-content: space-between;
   margin-bottom: 20px;
   position: relative;
-  &::after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 1px;
-    background: #d8d8d8;
-    bottom: -10px;
-  }
-  &:last-child {
-    &::after {
-      content: '';
-      display: none;
-    }
-  }
+
   @media (max-width: 768px) {
     flex-direction: column;
     &::after {
@@ -138,7 +151,7 @@
   line-height: 167%;
 }
 
-.specialization-icons {
+.specialization__icons {
   display: flex;
   align-items: center;
   @media (max-width: 768px) {
