--- a/src/components/Main/Univers/AboutUnivers/AboutUnivers.scss
+++ b/src/components/Main/Univers/AboutUnivers/AboutUnivers.scss
@@ -64,6 +64,8 @@
 .hideBlock_visability {
   max-height: 260px;
 }
-.isShow {
-  display: block;
+.test.btn{
+  background-color: red;
 }
+
+// @import "../../../../../node_modules/bootstrap/scss/bootstrap.scss";
