--- a/src/components/Modals/Modal.scss
+++ b/src/components/Modals/Modal.scss
@@ -10,7 +10,38 @@
   transform: translateY(20px);
   opacity: 0;
 }
-.modal_type_universitiesList{
+
+.modal_type_mobileMenu {
+  padding: 10px;
+  height: 100%;
+  max-height: 100%;
+  top: 0;
+  right: 0;
+}
+.mobileMenu__profile{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 30px;
+}
+.mobileMenu__profile_avatar{
+  height: 100px;
+  img{
+    height: 100%;
+  }
+}
+.mobileMenu__city-box{
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+}
+.mobileMenu__close{
+
+}
+
+.modal_type_universitiesList {
   width: 100%;
 }
 .modal_isVisable {
