--- a/src/components/Modals/Modal.scss
+++ b/src/components/Modals/Modal.scss
@@ -18,7 +18,7 @@
   top: 0;
   right: 0;
 }
-.mobileMenu__profile{
+.mobileMenu__profile {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -26,19 +26,18 @@
   gap: 20px;
   margin-bottom: 30px;
 }
-.mobileMenu__profile_avatar{
+.mobileMenu__profile_avatar {
   height: 100px;
-  img{
+  img {
     height: 100%;
   }
 }
-.mobileMenu__city-box{
+.mobileMenu__city-box {
   position: relative;
   display: flex;
   justify-content: space-between;
 }
-.mobileMenu__close{
-
+.mobileMenu__close {
 }
 
 .modal_type_universitiesList {
@@ -79,4 +78,27 @@
 .modal__btn {
   display: block;
   width: 100%;
+}
+
+.modal_type_auth {
+  background-color: rgba(0, 0, 0, 0.4);
+  width: 100%;
+  min-height: 100%;
+  height: 100%;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.modal__form {
+  border: 1px solid red;
+  width: 400px;
+  height: 300px;
+}
+.modal__form-input {
+  width: 100%;
+  padding: 10px;
+  background: white;
+  border-radius: 100px;
+  border: 1px solid #dfe9f5;
 }
