--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -90,6 +90,9 @@
   align-items: center;
   gap: 40px;
   margin-bottom: 25px;
+  @media (max-width: 500px) {
+    gap: 10px;
+  }
 }
 .header__item {
   position: relative;
@@ -99,12 +102,12 @@
 }
 .header__item_type_input {
   flex: 1 1 60%;
-  @media (max-width: 1000px) {
-    display: none;
-  }
 }
 .header__logo {
   margin-right: 20px;
+  @media (max-width: 1000px) {
+    display: none;
+  }
 }
 .header__selected-city {
   display: flex;
@@ -156,7 +159,6 @@
   }
 }
 
-
 .header__item_type_profile {
 }
 .header__profile-avatar {
@@ -178,6 +180,7 @@
   position: relative;
   display: none;
   height: 20px;
+  width: 20px;
   &:before,
   &:after {
     content: '';
