--- a/src/components/Modals/Modal.scss
+++ b/src/components/Modals/Modal.scss
@@ -10,13 +10,30 @@
   transform: translateY(20px);
   opacity: 0;
 }
-
+.modal_isVisable {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0px);
+  transition: all 0.3s ease;
+}
 .modal_type_mobileMenu {
-  padding: 10px;
+  padding: 20px 5px 0;
   height: 100%;
   max-height: 100%;
   top: 0;
   right: 0;
+}
+.modal_type_registration{
+  width: 100%;
+  height: 100%;
+  max-height: 100%;
+  top: 0;
+  right: 0;
+  background-color: rgba(6, 6, 6, 0.3);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .mobileMenu__profile {
   display: flex;
@@ -43,12 +60,7 @@
 .modal_type_universitiesList {
   width: 100%;
 }
-.modal_isVisable {
-  opacity: 1;
-  visibility: visible;
-  transform: translateY(0px);
-  transition: all 0.3s ease;
-}
+
 .modal__search {
   margin-bottom: 10px;
   width: 100%;
@@ -91,7 +103,6 @@
   align-items: center;
 }
 .modal__form {
-  border: 1px solid red;
   width: 400px;
   height: 300px;
 }
@@ -101,4 +112,12 @@
   background: white;
   border-radius: 100px;
   border: 1px solid #dfe9f5;
+}
+
+.modal__closeIcon{
+  position: absolute;
+  font-size: 30px;
+}
+.mobileMenu__logo{
+
 }
