--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -160,14 +160,19 @@
 }
 
 .header__item_type_profile {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 .header__profile-avatar {
-  width: 32px;
-  height: 32px;
-  border-radius: 50px;
-  background-color: #767676;
+  display: block;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
   margin-right: 15px;
   @media (max-width: 1000px) {
+    display: none;
     margin-right: 0;
   }
 }
