--- a/src/components/Main/Lead/Lead.scss
+++ b/src/components/Main/Lead/Lead.scss
@@ -1,17 +1,39 @@
 .lead {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    height: 680px;
-
-}
-
-.lead__title {
-  text-align: center;
-  font-size: 66px;
-  max-width: 900px;
-  @media (max-width: 600px) {
-    font-size: 36px;
+  flex: 1 1 auto;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  @media (max-width: 840px) {
+    padding: 200px 50px;
   }
+  @media (max-width: 540px) {
+    padding: 200px 0px;
+  }
+}
+.lead__information {
+  font-size: 40px;
+  text-align: center;
+  position: relative;
+  z-index: 1;
+  color: #fff;
+  @media (max-width: 840px) {
+    font-size: 30px;
+  }
+}
+.lead__img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.lead__title {
+  margin-bottom: 20px;
+  @media (max-width: 840px) {
+    margin-bottom: 5px;
+  }
+}
+.lead__subtitle {
 }
