--- a/src/components/Modals/Modal.scss
+++ b/src/components/Modals/Modal.scss
@@ -23,7 +23,14 @@
   top: 0;
   right: 0;
 }
-.modal_type_registration{
+.modal_type_userInfo {
+  padding: 20px 5px 0;
+  height: 100%;
+  max-height: 100%;
+  top: 0;
+  left: 0;
+}
+.modal_type_registration {
   width: 100%;
   height: 100%;
   max-height: 100%;
@@ -45,7 +52,12 @@
 }
 .mobileMenu__profile_avatar {
   height: 100px;
+  width: 100px;
+  border-radius: 100px;
+  overflow: hidden;
   img {
+    object-fit: cover;
+    object-position: center;
     height: 100%;
   }
 }
@@ -114,10 +126,9 @@
   border: 1px solid #dfe9f5;
 }
 
-.modal__closeIcon{
+.modal__closeIcon {
   position: absolute;
   font-size: 30px;
 }
-.mobileMenu__logo{
-
+.mobileMenu__logo {
 }
